k8s/base/myapp-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: myapp:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8080

          # Inject ConfigMap and Secret as env variables
