k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-svc
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - port: 80          # service port
      targetPort: 8080  # pod containerPort
